Address review comments

--- a/recipes/enaml/meta.yaml
+++ b/recipes/enaml/meta.yaml
@@ -1,15 +1,16 @@
 {% set version = "0.10.1" %}
+{% set sha256 = "f6500bda40cdff006b4dc0ea7f4a0ae820542b2fbae3362f48dcc2194d84dfcc" %}
 package:
   name: enaml
   version: {{ version }}
 
 source:
   url: https://github.com/nucleic/enaml/archive/{{ version }}.tar.gz
-  fn: enaml-{{ version }}.tar.gz
-  sha256: f6500bda40cdff006b4dc0ea7f4a0ae820542b2fbae3362f48dcc2194d84dfcc
+  sha256: {{ sha256 }}
 
 build:
   number: 0
+  script: python setup.py install --single-version-externally-managed --record record.txt
   entry_points:
     - enaml-run = enaml.runner:main
   osx_is_app: True
@@ -54,9 +55,12 @@ test:
 
 about:
   home: https://github.com/nucleic/enaml
-  license: BSD
+  license: BSD 3-clause
+  license_family: BSD
   license_file: COPYING.txt
   summary: Declarative DSL for building rich user interfaces in Python
+  doc_url: http://nucleic.github.io/enaml/docs/
+  dev_url: https://github.com/nucleic/enaml
 
 extra:
   recipe-maintainers:
