--- a/recipes/bashlex/meta.yaml
+++ b/recipes/bashlex/meta.yaml
@@ -1,17 +1,18 @@
 {% set name = "bashlex" %}
-{% set version = "0.11" %}
-{% set sha256 = "ea59773824fd8c58fd0f140154f794f3bcb3598d8871f5597631ba36581fe998" %}
+{% set version = "0.12" %}
+{% set sha256 = "94bcf8759f28286d4fe2bbc408fa50e9fb7c46fa7097eac5b7cd76d75ca9936d" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ version }}.tar.gz
-  url: https://github.com/idank/{{ name }}/archive/{{ version }}.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
+  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -19,7 +20,6 @@ requirements:
   build:
     - python
     - setuptools
-    - enum34
   run:
     - python
     - enum34
