--- a/recipes/r-aqp/meta.yaml
+++ b/recipes/r-aqp/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: R CMD INSTALL --build .
-  skip: True  # [win32]
+  skip: True  # [win]
   rpaths:
     - lib/R/lib/
     - lib/
