--- a/recipes/bashlex/meta.yaml
+++ b/recipes/bashlex/meta.yaml
@@ -32,7 +32,7 @@ about:
   home: https://github.com/idank/bashlex
   license: GPL-3.0
   license_family: GPL
-  license_file: LICENSE
+  dev_url: https://github.com/idank/bashlex
   summary: 'Python parser for bash'
 
 extra:
