--- a/recipes/pythesint/meta.yaml
+++ b/recipes/pythesint/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pythesint" %}
-{% set version = "1.2.0" %}
-{% set sha256 = "457ae24b8ffcee7a03ff9515c1578aec81d2bf3dd7a599d7cafc6e146e441b65" %}
+{% set version = "1.3.1" %}
+{% set sha256 = "5e46853a8958bb3fbf26fba6eba0054551ac5004876740a941cf5e64faec2c4f" %}
 
 package:
   name: {{ name|lower }}
@@ -12,21 +12,22 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [not py27 or win]
+  skip: True  # [not py27]
 
 requirements:
   build:
     - python
     - pyyaml
     - requests
+    - xdg  # [not win]
     - setuptools
   run:
     - python
     - pyyaml
     - requests
+    - xdg  # [not win]
 
 test:
   requires:
@@ -39,7 +40,7 @@ about:
   home: https://github.com/nansencenter/py-thesaurus-interface
   license: GPL-3.0
   license_family: GPL
-  # TODO: add license file to the repo
+  license_file: LICENSE
   summary: 'An interface to metadata vocabularies for geospatial and other geophysical data'
 
   description: |
