--- a/recipes/bashlex/meta.yaml
+++ b/recipes/bashlex/meta.yaml
@@ -12,7 +12,6 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -22,7 +21,7 @@ requirements:
     - setuptools
   run:
     - python
-    - enum34
+    - enum34 # [py<34]
 
 test:
   imports:
@@ -32,6 +31,10 @@ about:
   home: https://github.com/idank/bashlex
   license: GPL-3.0
   license_family: GPL
+  # License file added manually so far:
+  # https://github.com/idank/bashlex/issues/27
+  # https://github.com/conda-forge/staged-recipes/pull/4401
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   dev_url: https://github.com/idank/bashlex
   summary: 'Python parser for bash'
 
