add geos, fix link

--- a/recipes/r-rgeos/meta.yaml
+++ b/recipes/r-rgeos/meta.yaml
@@ -26,12 +26,14 @@ requirements:
   build:
     - r-base
     - r-sp >=1.1_0
+    - geos
     - posix                # [win]
     - {{native}}toolchain  # [win]
     - gcc                  # [not win]
 
   run:
     - r-base
+    - geos
     - r-sp >=1.1_0
     - libgcc  # [not win]
 
@@ -41,7 +43,7 @@ test:
     - "\"%R%\" -e \"library('rgeos')\""  # [win]
 
 about:
-  home: https://r-forge.r-project.org/projects/rgeos/ http://trac.osgeo.org/geos/
+  home: https://r-forge.r-project.org/projects/rgeos/
   license: GPL (>= 2)
   summary: Interface to Geometry Engine - Open Source ('GEOS') using the C 'API' for topology
     operations on geometries. The 'GEOS' library is external to the package, and, when
