change according to kernel gateway recipe

--- a/recipes/jupyter_enterprise_gateway/meta.yaml
+++ b/recipes/jupyter_enterprise_gateway/meta.yaml
@@ -13,16 +13,19 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
-  script: python setup.py bdist_wheel
-  skip: True  # [win]
-  skip: True  # [osx]
+  noarch: python
+  script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+    - jupyter-enterprisegateway = enterprise_gateway:launch_instance
 
 requirements:
   build:
     - python
-    - wheel
+    - setuptools
+
+  run:
+    - python
     - jupyter_core >=4.0
     - jupyter_client >=4.2.0
     - notebook >=5.1.0,<6.0
@@ -32,9 +35,16 @@ requirements:
     - requests >=2.7,<3.0
     - paramiko >=2.1.2
 
-  run:
-    - python
-
+test:
+  imports:
+    - enterprise_gateway
+    - enterprise_gateway.services
+    - enterprise_gateway.services.kernels
+    - enterprise_gateway.services.kernelspecs
+    - enterprise_gateway.services.sessions
+  commands:
+    - jupyter-enterprisegateway --help
+    - jupyter enterprisegateway --help
 
 about:
   home: https://github.com/jupyter-incubator/jupyter_enterprise_gateway
