Switch to PyPi and update maintainers

--- a/recipes/enaml/meta.yaml
+++ b/recipes/enaml/meta.yaml
@@ -1,11 +1,11 @@
 {% set version = "0.10.1" %}
-{% set sha256 = "f6500bda40cdff006b4dc0ea7f4a0ae820542b2fbae3362f48dcc2194d84dfcc" %}
+{% set sha256 = "d97e41bf9e8e38ceb119743299501f292de2ee1dcc3b01b4c16eaae8973d5b4f" %}
 package:
   name: enaml
   version: {{ version }}
 
 source:
-  url: https://github.com/nucleic/enaml/archive/{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -22,8 +22,8 @@ requirements:
     - python
     - setuptools
     - atom >=0.4.0
-    - kiwisolver >=0.2.0
-    - ply
+    - kiwisolver >=1.0.0
+    - ply >=3.4
     - future
     - qtpy >=1.3
   run:
@@ -32,8 +32,8 @@ requirements:
     - atom >=0.4.0
     - pyqt
     - qtpy >=1.3
-    - kiwisolver >=0.2.0
-    - ply
+    - kiwisolver >=1.0.0
+    - ply >=3.4
     - future
 
 test:
@@ -65,8 +65,5 @@ about:
 extra:
   recipe-maintainers:
     - blink1073
-    - ericdill
     - licode
     - MatthieuDartiailh
-    - sccolbert
-    - tacaswell
