--- a/recipes/pivottablejs/meta.yaml
+++ b/recipes/pivottablejs/meta.yaml
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.python.org/packages/fb/78/517225db7bc2b449dc75d491cdf3bb0036ca63c064eb38f95ba38fcb9f9e/pivottablejs-0.8.0.tar.gz#md5=6e828cfc72ef0502325d726a052c1f5f
   sha256: {{ sha256 }}
 
 build:
