follow more closely the template

--- a/recipes/enaml/meta.yaml
+++ b/recipes/enaml/meta.yaml
@@ -1,10 +1,12 @@
+{% set name = "enaml" %}
 {% set version = "0.10.1" %}
 {% set sha256 = "d97e41bf9e8e38ceb119743299501f292de2ee1dcc3b01b4c16eaae8973d5b4f" %}
 package:
-  name: enaml
+  name: {{ name|lower }
   version: {{ version }}
 
 source:
+  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
