--- a/recipes/enaml/meta.yaml
+++ b/recipes/enaml/meta.yaml
@@ -2,7 +2,7 @@
 {% set version = "0.10.1" %}
 {% set sha256 = "d97e41bf9e8e38ceb119743299501f292de2ee1dcc3b01b4c16eaae8973d5b4f" %}
 package:
-  name: {{ name|lower }
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
