added the license path

--- a/recipes/pivottablejs/meta.yaml
+++ b/recipes/pivottablejs/meta.yaml
@@ -31,7 +31,7 @@ about:
   home: https://github.com/nicolaskruchten/jupyter_pivottablejs
   license: MIT
   license_family: MIT
-  license_file: LICENSE.md
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Drag and drop Pivot Tables and Charts for Jupyter/IPython Notebook, care of PivotTable.js'
   description: |
     Drag and drop Pivot Tables and Charts for Jupyter/IPython Notebook
