--- a/recipes/drms/meta.yaml
+++ b/recipes/drms/meta.yaml
@@ -13,7 +13,7 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
-  number: 1
+  number: 0
   script: python setup.py install  --single-version-externally-managed --record=record.txt
   noarch: python
 
@@ -21,9 +21,6 @@ requirements:
   build:
     - python
     - setuptools
-    - numpy >=1.9.0
-    - pandas >=0.14.1
-    - six >=1.8.0
   run:
     - python
     - numpy >=1.9.0
@@ -38,7 +35,7 @@ about:
   home: https://github.com/kbg/drms
   license: MIT
   license_family: MIT
-  license_file: ''
+  license_file: 'LICENSE.txt'
   summary: Access HMI, AIA and MDI data with Python
   description: |
     The ``drms`` module provides an easy-to-use interface for accessing HMI, AIA and MDI data with Python.
@@ -49,5 +46,6 @@ about:
 
 extra:
   recipe-maintainers:
-    - kbg
     - SolarDrew
+    - Cadair
+    - nabobalis
