--- a/recipes/drms/meta.yaml
+++ b/recipes/drms/meta.yaml
@@ -42,7 +42,7 @@ about:
     It uses the publicly accessible `JSOC <http://jsoc.stanford.edu/>`_ DRMS server by default, but can also\nbe used with local `NetDRMS <http://jsoc.stanford.edu/netdrms/>`_ sites.
     More information, including a detailed tutorial is available on `Read the Docs <http://drms.readthedocs.io/>`_.
   doc_url: http://drms.readthedocs.io/
-  dev_url: https://github.com/kgb/drms
+  dev_url: https://github.com/kbg/drms
 
 extra:
   recipe-maintainers:
