--- a/recipes/sphinx-autodoc-typehints/meta.yaml
+++ b/recipes/sphinx-autodoc-typehints/meta.yaml
@@ -14,9 +14,8 @@ source:
     - remove_extras.patch
 
 build:
-  skip: True  # [py2k or py34]
+  skip: True  # [py2k]
   number: 0
-  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
