--- a/recipes/r-rgeos/meta.yaml
+++ b/recipes/r-rgeos/meta.yaml
@@ -16,7 +16,8 @@ source:
 
 build:
   number: 0
-  skip: true  # [win32]
+  # build fails at 64bit Windows
+  skip: true  # [win]
 
   rpaths:
     - lib/R/lib/
