--- a/recipes/pythesint/meta.yaml
+++ b/recipes/pythesint/meta.yaml
@@ -40,7 +40,7 @@ about:
   home: https://github.com/nansencenter/py-thesaurus-interface
   license: GPL-3.0
   license_family: GPL
-  license_file: LICENSE
+  ## license_file: LICENSE
   summary: 'An interface to metadata vocabularies for geospatial and other geophysical data'
 
   description: |
