libcroco: fix lints spotted a while ago

--- a/recipes/libcroco/meta.yaml
+++ b/recipes/libcroco/meta.yaml
@@ -1,8 +1,6 @@
-# Copyright 2016 Peter Williams and collaborators.
-# This file is licensed under a 3-clause BSD license; see LICENSE.txt.
-
 {% set version = '0.6.12' %}
 {% set version_major = version.rsplit('.', 1)[0] %}
+{% set sha256 = "ddc4b5546c9fb4280a5017e2707fbd4839034ed1aba5b7d4372212f34f84f860" %}
 
 package:
   name: libcroco
@@ -10,12 +8,10 @@ package:
 
 source:
   url: http://ftp.gnome.org/pub/gnome/sources/libcroco/{{ version_major }}/libcroco-{{ version }}.tar.xz
-  sha256: ddc4b5546c9fb4280a5017e2707fbd4839034ed1aba5b7d4372212f34f84f860
+  sha256: {{ sha256 }}
 
 build:
   number: 0
-  script_env:
-    - NJOBS
 
 requirements:
   build:
@@ -26,13 +22,11 @@ requirements:
     - glib >=2.51
     - libxml2 >=2.9
 
-tests:
+test:
   commands:
-    - test -f $PREFIX/lib/libcroco-{{ version_major }}.a      # [linux]
-    - test -f $PREFIX/lib/libcroco-{{ version_major }}.dylib  # [osx]
-    - test -f $PREFIX/lib/libcroco-{{ version_major }}.la
-    - conda inspect linkages -p $PREFIX libcroco-{{ version_major }} # [not win]
-    - conda inspect objects -p $PREFIX libcroco-{{ version_major }} # [osx]
+    - test -f $PREFIX/lib/libcroco-{{ version_major }}$SHLIB_EXT
+    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
+    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
 about:
   home: http://www.linuxfromscratch.org/blfs/view/svn/general/libcroco.html
@@ -42,5 +36,5 @@ about:
 
 extra:
   recipe-maintainers:
-    - pkgw
     - jenzopr
+    - pkgw
