Changing to fetching from github release.
Since it automatically includes the LICENSE file. Python packaging and I are not compatible today.

--- a/recipes/pythesint/meta.yaml
+++ b/recipes/pythesint/meta.yaml
@@ -1,14 +1,14 @@
 {% set name = "pythesint" %}
-{% set version = "1.3.1" %}
-{% set sha256 = "5e46853a8958bb3fbf26fba6eba0054551ac5004876740a941cf5e64faec2c4f" %}
+{% set version = "1.3.2" %}
+{% set sha256 = "02eb14024b62b95ebe5b09a97cf6f71c129bcf41ccc97e0c70a19cdeb31a6adc" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  fn: v{{ version }}.tar.gz
+  url: https://github.com/nansencenter/py-thesaurus-interface/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -40,7 +40,7 @@ about:
   home: https://github.com/nansencenter/py-thesaurus-interface
   license: GPL-3.0
   license_family: GPL
-  ## license_file: LICENSE
+  license_file: LICENSE
   summary: 'An interface to metadata vocabularies for geospatial and other geophysical data'
 
   description: |
