fix license and add more import tests still waiting on deps [ci skip]

--- a/recipes/databroker/meta.yaml
+++ b/recipes/databroker/meta.yaml
@@ -47,10 +47,12 @@ requirements:
 test:
   imports:
     - databroker
+    - databroker.broker
+    - databroker.core
 
 about:
   home: https://github.com/NSLS-II/databroker
-  license: BSD
+  license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
   summary: 'A unified interface to the various data sources at NSLS-II.'
