added pytest-runner in requirements (meta.yaml)

--- a/recipes/larray-editor/meta.yaml
+++ b/recipes/larray-editor/meta.yaml
@@ -19,6 +19,7 @@ requirements:
   build:
     - python
     - setuptools
+    - pytest-runner
 
   run:
     - python
@@ -26,6 +27,7 @@ requirements:
     - matplotlib
     - pyqt
     - qtpy
+    - pytest-runner
 
 about:
   home: https://github.com/larray-project/larray-editor
