--- a/recipes/larray-editor/meta.yaml
+++ b/recipes/larray-editor/meta.yaml
@@ -34,7 +34,7 @@ about:
   home: https://github.com/larray-project/larray-editor
   license: GPL-3.0
   license_family: GPL
-  license_file: COPYING
+  license_file: LICENSE
   summary: "Graphical User Interface for LArray."
 
 extra:
