trying to add tests

--- a/recipes/larray-editor/meta.yaml
+++ b/recipes/larray-editor/meta.yaml
@@ -30,6 +30,10 @@ requirements:
     - qtpy
     - pytest-runner
 
+test:
+  imports:
+    - larray_editor
+
 about:
   home: https://github.com/larray-project/larray-editor
   license: GPL-3.0
