--- a/recipes/pandas_ml/meta.yaml
+++ b/recipes/pandas_ml/meta.yaml
@@ -20,7 +20,6 @@ requirements:
     - python
     - setuptools
     - pandas >=0.17.0
-    - enum34
   run:
     - python
     - pandas >=0.17.0
@@ -49,7 +48,7 @@ test:
     
 about:
   home: https://github.com/pandas-ml/pandas-ml
-  license: BSD 
+  license: BSD 3-clause
   license_file: LICENSE
   summary: 'pandas, scikit-learn and xgboost integration'
 
