update to TB 0.4.0rc3
note that now we require futures only for python 2
also use official mechanism to include license file

--- a/recipes/tensorboard/meta.yaml
+++ b/recipes/tensorboard/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.1.6" %}
+{% set version = "0.4.0rc3" %}
 {% set build_number = "0" %}
 
 package:
@@ -6,31 +6,30 @@ package:
   version: {{ version }}
 
 build:
-  # There are two wheels (py2, py3) in pypi, that seem equivalent to me.
-  # So for the time being, we try building a noarch package.
-  # Also see:
-  #  https://github.com/conda-forge/conda-smithy/pull/531
+  # There are two wheels (py2, py3) in pypi.
+  # At the moment they are equivalent, as only their metadata changes.
+  # So we can create a noarch package.
+  # Recheck with newer versions (uncompress and diff both py2 and py3 wheels).
   noarch: python
   number: {{ build_number }}
   entry_points:
     - tensorboard = tensorboard.main:main
   script:
     - pip install --no-deps tensorflow-tensorboard=={{ version }}
-    - cp ${RECIPE_DIR}/LICENSE ${SRC_DIR}  # [not win]
-    # - copy %RECIPE_DIR%/LICENSE %SRC_DIR%  # [win]
 
 requirements:
-  # See: https://pypi.python.org/pypi/tensorflow-tensorboard/0.1.5
+  # See: https://pypi.python.org/pypi/tensorflow-tensorboard/0.4.0rc3
   build:
     - python
     - pip
   run:
     - python
+    - futures >=3.1.1  # [py27]
     - bleach ==1.5.0
     - html5lib ==0.9999999
     - markdown >=2.6.8
-    - numpy >=1.11.0
-    - protobuf >=3.2.0
+    - numpy >=1.12.0
+    - protobuf >=3.3.0
     - six >=1.10.0
     - werkzeug >=0.11.10
 
@@ -59,7 +58,7 @@ requirements:
     # and remove the tensorflow dependency on the tensorboard package. Pros: this would create
     # a saner dependency cycle. Cons: it would be inconsitent with the official pypi releases.
     #
-    # - tensorflow >=1.3.0
+    # - tensorflow >=1.4.0
     #
 
 test:
@@ -70,7 +69,7 @@ test:
 about:
   home: https://github.com/tensorflow/tensorboard
   license: Apache 2.0
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: "TensorFlow's Visualization Toolkit"
 
 extra:
