noarch is not possible anymore
py2 and py3 have different dependencies

--- a/recipes/tensorboard/meta.yaml
+++ b/recipes/tensorboard/meta.yaml
@@ -6,11 +6,13 @@ package:
   version: {{ version }}
 
 build:
+
   # There are two wheels (py2, py3) in pypi.
+  # (for newer versions, recheck by diffing both py2 and py3 wheels).
   # At the moment they are equivalent, as only their metadata changes.
-  # So we can create a noarch package.
-  # Recheck with newer versions (uncompress and diff both py2 and py3 wheels).
-  noarch: python
+  # But we cannot create a noarch package: dependencies are different
+  # noarch: python
+
   number: {{ build_number }}
   entry_points:
     - tensorboard = tensorboard.main:main
