Add selector for Python 2 and add license_family

--- a/recipes/pandas_ml/meta.yaml
+++ b/recipes/pandas_ml/meta.yaml
@@ -23,7 +23,7 @@ requirements:
   run:
     - python
     - pandas >=0.17.0
-    - enum34
+    - enum34  # [py2k]
 
 test:
   imports:
@@ -49,6 +49,7 @@ test:
 about:
   home: https://github.com/pandas-ml/pandas-ml
   license: BSD 3-clause
+  license_family: BSD
   license_file: LICENSE
   summary: 'pandas, scikit-learn and xgboost integration'
 
