add windows tests

--- a/recipes/geotiff/meta.yaml
+++ b/recipes/geotiff/meta.yaml
@@ -16,31 +16,34 @@ build:
   skip: True  # [win and py36]
   features:
     - vc9     # [win and py27]
-    - vc14    # [win and py35]
+    - vc14    # [win and (py35 or py36)]
 
 requirements:
   build:
     - python  # [win]
     - cmake
+    - toolchain
     - proj4 4.9.3
     - zlib 1.2.11
     - jpeg 9*
     - libtiff >=4.0.3,<4.0.8
-    - vc9     # [win and py27]
-    - vc14    # [win and (py35 or py36)]
+    - vc 9     # [win and py27]
+    - vc 14    # [win and (py35 or py36)]
+    
   run:
-    - python  # [win]
     - proj4 4.9.3
     - zlib 1.2.11
     - jpeg 9*
     - libtiff >=4.0.3,<4.0.8
-    - vc9     # [win and py27]
-    - vc14    # [win and (py35 or py36)]
+    - vc 9     # [win and py27]
+    - vc 14    # [win and (py35 or py36)]
 
 test:
   commands:
-    - test -f $PREFIX/lib/libgeotiff.so                # [linux]
-    - test -f $PREFIX/lib/libgeotiff.dylib             # [osx]
+    - test -f $PREFIX/lib/libgeotiff.so                 # [linux]
+    - test -f $PREFIX/lib/libgeotiff.dylib              # [osx]
+    - if not exist %LIBRARY_LIB%\\geotiff_i.lib exit 1  # [win]
+    - if not exist %LIBRARY_BIN%\\geotiff.dll exit 1    # [win]
 
 about:
   home: https://trac.osgeo.org/geotiff
