--- a/recipes/bintrees/meta.yaml
+++ b/recipes/bintrees/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "bintrees" %}
-{% set version = "2.0.7 %}
-{% set sha256 = "60675e6602cef094abcd38bf4aecc067d78ae2d5e1645615c789724542d11270" }
+{% set version = "2.0.7" %}
+{% set sha256 = "60675e6602cef094abcd38bf4aecc067d78ae2d5e1645615c789724542d11270" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
+  fn: {{ name }}-{{ version }}.zip
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.zip
   sha256: {{ sha256 }}
 
@@ -27,12 +27,9 @@ requirements:
 test:
   imports:
     - bintrees
-    - bintrees.BinaryTree
-    - bintrees.AVLTree
-    - bintrees.RBTree
-    - bintrees.FastBinaryTree
-    - bintrees.FastAVLTree
-    - bintrees.FastRBTree
+    - bintrees.bintree
+    - bintrees.avltree
+    - bintrees.rbtree
 
 about:
   home: https://pypi.python.org/pypi/bintrees/2.0.7
