change version to 0.7.0 and md5

--- a/recipes/jupyter_enterprise_gateway/meta.yaml
+++ b/recipes/jupyter_enterprise_gateway/meta.yaml
@@ -1,7 +1,7 @@
 
 {% set name = "jupyter_enterprise_gateway" %}
-{% set version = "0.6.0" %}
-{% set sha256 = "6359ed383d80e87a463d98dad4fb114b8581d928e22cf462c1d98595077397d3" %}
+{% set version = "0.7.0" %}
+{% set md5 = "31763073af6e6e405e0b0cefea49fe7e" %}
 
 package:
   name: {{ name|lower }}
@@ -10,7 +10,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  md5: {{ md5 }}
 
 build:
   number: 0
