--- a/recipes/assertpy/meta.yaml
+++ b/recipes/assertpy/meta.yaml
@@ -1,15 +1,20 @@
+{% set name = "assertpy" %}
+{% set version = "0.12" %}
+{% set sha256 = "563502ad2d89f5242543924d1ae62472c24daeeaf2ecfd78b004feb0559395b9" %}
+
 package:
-  name: assertpy
-  version: !!str 0.12
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: assertpy-0.12.tar.gz
-  url: https://pypi.python.org/packages/54/66/1ed435aa2f51e39d73ff4c59dc9bc569278fcaf9586599891b146a8f9e5a/assertpy-0.12.tar.gz#md5=e0d382ca6e3788e564f0ec6c24162c37
-  md5: e0d382ca6e3788e564f0ec6c24162c37
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   noarch: python
   number: 0
+  script: python setup.py install --record record.txt
 
 requirements:
   build:
@@ -23,9 +28,11 @@ test:
     - assertpy
 
 about:
-  home: https://github.com/ActivisionGameScience/assertpy
+  home: https://github.com/ActivisionGameScience/assertpy  
   license: BSD 3-Clause
+  license_file: LICENSE
   summary: 'Assertion library for python unit testing with a fluent API'
+  dev_url: https://github.com/ActivisionGameScience/assertpy
 
 extra:
   recipe-maintainers:
