--- a/recipes/h5pickle/meta.yaml
+++ b/recipes/h5pickle/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "h5pickle" %}
-{% set version = "0.1" %}
-{% set sha256 = "30b5c0880ec231dccd0365716d81b5a789eb9d3599cae12a55cdfa5046f4948f" %}
+{% set version = "0.2" %}
+{% set sha256 = "29fe99432af405bb48e6acac56c660e99645a5707f4cc36a629aec2b1a19892a" %}
 
 package:
   name: {{ name|lower }}
@@ -28,12 +28,12 @@ requirements:
 
 test:
   imports:
+    - h5pickle
 
 about:
   home: http://github.com/exteris/h5pickle
   license: MIT
   license_family: MIT
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Wrapper for h5py with pickle capabilities'
 
   # The remaining entries in this section are optional, but recommended
