Remove LICENSE in recipe in favor of packaged version

--- a/recipes/h5pickle/meta.yaml
+++ b/recipes/h5pickle/meta.yaml
@@ -34,6 +34,7 @@ about:
   home: http://github.com/exteris/h5pickle
   license: MIT
   license_family: MIT
+  license_file: LICENSE
   summary: 'Wrapper for h5py with pickle capabilities'
 
   # The remaining entries in this section are optional, but recommended
