comment license_file until LICENSE distributed with assertpy

--- a/recipes/assertpy/meta.yaml
+++ b/recipes/assertpy/meta.yaml
@@ -30,7 +30,8 @@ test:
 about:
   home: https://github.com/ActivisionGameScience/assertpy  
   license: BSD 3-Clause
-  license_file: LICENSE
+  # https://github.com/ActivisionGameScience/assertpy/issues/72
+  # license_file: LICENSE
   summary: 'Assertion library for python unit testing with a fluent API'
   dev_url: https://github.com/ActivisionGameScience/assertpy
 
