manually package the license

--- a/recipes/assertpy/meta.yaml
+++ b/recipes/assertpy/meta.yaml
@@ -31,7 +31,7 @@ about:
   home: https://github.com/ActivisionGameScience/assertpy  
   license: BSD 3-Clause
   # https://github.com/ActivisionGameScience/assertpy/issues/72
-  # license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Assertion library for python unit testing with a fluent API'
   dev_url: https://github.com/ActivisionGameScience/assertpy
 
