working on timml conda-build recipe

--- a/recipes/timml/meta.yaml
+++ b/recipes/timml/meta.yaml
@@ -18,7 +18,8 @@ build:
 
 requirements:
   build:
-    - toolchain3
+    - toolchain
+    - mingw # [win and py>=35]
     - python 
     - scipy
     - numpy  
