boost python added

--- a/recipes/pykep/meta.yaml
+++ b/recipes/pykep/meta.yaml
@@ -25,9 +25,14 @@ requirements:
   build:
     - toolchain
     - cmake
-    - boost-cpp 1.65.1
+    - boost 1.65.1
+
   run:
-    - boost-cpp 1.65.1
+    - boost 1.65.1
+
+test:
+  commands:
+    - test -f
 
 about:
   home: https://esa.github.io/pykep/
