license issue fixed

--- a/recipes/pykep/meta.yaml
+++ b/recipes/pykep/meta.yaml
@@ -37,7 +37,7 @@ test:
 about:
   home: https://esa.github.io/pykep/
   license: GPL v3 and LGPL v3
-  license_file: COPYING.lgpl3
+  license_file: LICENSE.txt
   summary: 'pykep is a scientific library providing basic tools for interplanetary trajectory design.'
 
 extra:
