skipping windows for the 2.0 (will reactivate it eventually)

--- a/recipes/pykep/meta.yaml
+++ b/recipes/pykep/meta.yaml
@@ -20,7 +20,8 @@ source:
 
 build:
   number: 0
-
+  skip: true  # [win]
+  
 requirements:
   build:
     - toolchain
@@ -29,6 +30,7 @@ requirements:
 
   run:
     - boost 1.65.1
+
 
 test:
   commands:
