Skip on Windows.

--- a/recipes/r-survivalroc/meta.yaml
+++ b/recipes/r-survivalroc/meta.yaml
@@ -16,10 +16,10 @@ source:
 
 build:
   number: 0
-  skip: true  # [win32]
   rpaths:
     - lib/R/lib/
     - lib/
+  skip: true  # [win]
 
 requirements:
   build:
