--- a/recipes/nltk-data/meta.yaml
+++ b/recipes/nltk-data/meta.yaml
@@ -34,3 +34,7 @@ about:
   home: http://nltk.org/
   license: Apache 2.0
   summary: Data for the Natural Language Toolkit
+
+extra:
+  recipe-maintainers:
+    - danielfrg
