Manually package ACM license for R CRAN package akima.
https://cran.r-project.org/web/packages/akima/LICENSE
https://www.acm.org/publications/policies/software-copyright-notice

--- a/recipes/r-akima/meta.yaml
+++ b/recipes/r-akima/meta.yaml
@@ -50,6 +50,7 @@ about:
     for regular grids was also added for comparison with the bicubic interpolator on
     regular grids.'
   license_family: OTHER
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
 
 extra:
   recipe-maintainers:
