Update sha256 for re-release

--- a/recipes/reprounzip-qt/meta.yaml
+++ b/recipes/reprounzip-qt/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "reprounzip-qt" %}
 {% set version = "1.0.11" %}
-{% set sha256 = "5cb71f598753150249674208ca47316fe660bdb3feafeaab039874af104f64c4" %}
+{% set sha256 = "6738edae930aa8e447ec1c6e1fb0341bbe84ca94ed7e54e14c2abbb3b21af563" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}-1.tar.gz
   sha256: {{ sha256 }}
 
 build:
