--- a/recipes/reprozip-jupyter/meta.yaml
+++ b/recipes/reprozip-jupyter/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "reprozip-jupyter" %}
 {% set version = "0.2" %}
-{% set sha256 = "852bd6bb9bb7a8d1131eed29c194bc566da747ce4bd35c88419d4d76f1765e52" %}
+{% set sha256 = "1425976a0b9d559f7f7eb107ae7185807e610585cd0939ec974ac4ad5e830075" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}-1.tar.gz
   sha256: {{ sha256 }}
 
 build:
