Entrypoints seem to require setuptools

--- a/recipes/reprozip-jupyter/meta.yaml
+++ b/recipes/reprozip-jupyter/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - setuptools
   run:
     - python
+    - setuptools
     - rpaths >=0.8
     - reprounzip >=1.0
     - notebook
