clean up and missing deps

--- a/recipes/pykep/meta.yaml
+++ b/recipes/pykep/meta.yaml
@@ -1,13 +1,7 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
-
-# Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "pykep" %}
 {% set version = "2.0" %}
 {% set sha256 = "274a2053e5d85a6d5c9f60aaeeb2f70505de3b94fb5c9b06e68f92f3defaf86d" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
-# You may need the openssl package, available on conda-forge
-#  `conda install openssl -c conda-forge``
+
 
 package:
   name: {{ name|lower }}
@@ -27,14 +21,18 @@ requirements:
     - toolchain
     - cmake
     - boost 1.65.1
+    - python
 
   run:
     - boost 1.65.1
+    - python
 
 
 test:
   commands:
     - test -f
+  imports:
+    - pykep
 
 about:
   home: https://esa.github.io/pykep/
