updated about:license_file in meta.yaml

--- a/recipes/larray-editor/meta.yaml
+++ b/recipes/larray-editor/meta.yaml
@@ -37,7 +37,7 @@ about:
   home: https://github.com/larray-project/larray-editor
   license: GPL-3.0
   license_family: GPL
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: "Graphical User Interface for LArray."
 
 extra:
