r-spatest: update maintainer

--- a/recipes/r-spatest/meta.yaml
+++ b/recipes/r-spatest/meta.yaml
@@ -55,6 +55,10 @@ about:
 
   license_family: GPL3
 
+extra:
+  recipe-maintainers:
+    - endrebak
+
 # The original CRAN metadata for this package was:
 
 # Package: SPAtest
