--- a/recipes/onnx/meta.yaml
+++ b/recipes/onnx/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "onnx" %}
-{% set version = "0.2" %}
-{% set sha256 = "63dde5e5f3aa88a8993c65ca35960bac06ed2233001924db28a611b7c40c6254" %}
+{% set version = "0.2.1" %}
+{% set sha256 = "3eabd716ccaf54d857519101573ee8e652b7920b5fcbf01a21fcbdcfd73823d2" %}
 
 package:
   name: {{ name|lower }}
@@ -13,25 +13,42 @@ source:
 
 build:
   number: 0
+  script: ONNX_BINARY_BUILD=1 python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
     - python
     - setuptools
     - toolchain
-    - protobuf
-    - numpy
+    - protobuf 3.4.*
     - pytest-runner
   run:
     - python
-    - protobuf
+    - protobuf 3.4.*
     - numpy
+
+test:
+  imports:
+    - onnx
+  commands:
+    - conda inspect linkages -p $PREFIX {{ name }}  # [unix]
+    - conda inspect objects -p $PREFIX {{ name }}   # [osx]
 
 about:
   home: https://github.com/onnx/onnx/
-  license: BSD
+  license: MIT
+  license_family: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'  # https://github.com/onnx/onnx/pull/314
   summary: Open Neural Network Exchange library
+  description: |
+    Open Neural Network Exchange (ONNX) is the first step toward an open
+    ecosystem that empowers AI developers to choose the right tools as their
+    project evolves. ONNX provides an open source format for AI models. It
+    defines an extensible computation graph model, as well as definitions of
+    built-in operators and standard data types. Initially we focus on the
+    capabilities needed for inferencing (evaluation).
 
 extra:
   recipe-maintainers:
     - ezyang
+    - dougalsutherland
