fix windows syntax

--- a/recipes/onnx/meta.yaml
+++ b/recipes/onnx/meta.yaml
@@ -13,7 +13,10 @@ source:
 
 build:
   number: 0
-  script: ONNX_BINARY_BUILD=1 python setup.py install --single-version-externally-managed --record=record.txt
+  script:
+    - ONNX_BINARY_BUILD=1        # [unix]
+    - set "ONNX_BINARY_BUILD=1"  # [win]
+    - python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
