--- a/recipes/xonda/meta.yaml
+++ b/recipes/xonda/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xonda" %}
-{% set version = "0.1.6" %}
-{% set sha256 = "d58439c548433adcda98e695be53e526ba940a4b9c44fb9a05d92cd495cdd47f" %}
+{% set version = "0.2" %}
+{% set sha256 = "ca76666865e49da04abfab8be45a81900a21be801cfce938d4f89fa7ce616864" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://github.com/gforsyth/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
@@ -20,32 +20,19 @@ requirements:
     - python
   run:
     - python
-
-test:
-  requires:
     - xonsh
-  imports:
-    - simplejson
-    - simplejson.tests
 
 about:
-  home: http://github.com/simplejson/simplejson
-  license: MIT
-  license_family: MIT
-  license_file: LICENSE.txt
+  home: https://github.com/gforsyth/xonda
+  license: BSD-3-Clause
+  license_family: BSD
+  license_file: LICENSE
   summary: 'This is a thin wrapper around conda for use with xonsh'
 
-  description: |
-    simplejson is a simple, fast, complete, correct and extensible
-    JSON <http://json.org> encoder and decoder for Python 2.5+ and
-    Python 3.3+. It is pure Python code with no dependencies, but includes
-    an optional C extension for a serious speed boost.
-  doc_url: http://simplejson.readthedocs.io/
-  dev_url: https://github.com/simplejson/simplejson
+  doc_url: https://github.com/gforsyth/xonda
+  dev_url: https://github.com/gforsyth/xonda
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
-    - HomerSimpson
-    - LukeSkywalker
+    - CJ-Wright
+    - gforsyth
