--- a/recipes/xonda/meta.yaml
+++ b/recipes/xonda/meta.yaml
@@ -13,11 +13,13 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
     - python
+    - setuptools
   run:
     - python
     - xonsh
