fix tests (was looking at master version)

--- a/recipes/onnx-tf/meta.yaml
+++ b/recipes/onnx-tf/meta.yaml
@@ -15,6 +15,7 @@ build:
   # Could be noarch: python except for the tests....
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: true  # [win32 or (win64 and py27)]
 
 requirements:
   build:
@@ -33,9 +34,6 @@ test:
     # These require importing tensorflow, which currently the Linux CI can't do.
     - onnx_tf.backend      # [not linux]
     - onnx_tf.backend_rep  # [not linux]
-    - onnx_tf.common       # [not linux]
-    - onnx_tf.frontend     # [not linux]
-    - onnx_tf.tf_net
 
 about:
   home: http://github.com/onnx/onnx-tensorflow
