Make it a bit harder to forget the postversion

--- a/recipes/reprounzip-qt/meta.yaml
+++ b/recipes/reprounzip-qt/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "reprounzip-qt" %}
 {% set version = "1.0.11" %}
+{% set postversion = "-1" %}
 {% set sha256 = "6738edae930aa8e447ec1c6e1fb0341bbe84ca94ed7e54e14c2abbb3b21af563" %}
 
 package:
@@ -8,7 +9,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}-1.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}{{ postversion }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
