--- a/recipes/reprozip-jupyter/meta.yaml
+++ b/recipes/reprozip-jupyter/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "reprozip-jupyter" %}
 {% set version = "0.2" %}
+{% set postversion = "-1" %}
 {% set sha256 = "1425976a0b9d559f7f7eb107ae7185807e610585cd0939ec974ac4ad5e830075" %}
 
 package:
@@ -8,7 +9,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}-1.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}{{ postversion }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
