--- a/recipes/xonda/meta.yaml
+++ b/recipes/xonda/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xonda" %}
-{% set version = "0.2" %}
-{% set sha256 = "ca76666865e49da04abfab8be45a81900a21be801cfce938d4f89fa7ce616864" %}
+{% set version = "0.2.1" %}
+{% set sha256 = "09eefdf61bc987d1b1522e49fe116650b93d1536c47881ea7a197398beabaffe" %}
 
 package:
   name: {{ name|lower }}
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   noarch: python
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python setup.py install
 
 requirements:
   build:
@@ -23,6 +23,15 @@ requirements:
   run:
     - python
     - xonsh
+
+test:
+  requires:
+    - pytest
+  source_files:
+    - tests/
+    - xontrib/
+  commands:
+    - py.test -v .
 
 about:
   home: https://github.com/gforsyth/xonda
