--- a/recipes/nltk-data/meta.yaml
+++ b/recipes/nltk-data/meta.yaml
@@ -1,20 +1,23 @@
-{%set name = "nltk" %}
+{%set name = "nltk-data" %}
 {%set version = "2017.10.22" %}
+{% set commit = "c0a373066e1477bd201acb071be171e8cc0ca673" %}
 {%set hash_type = "sha256" %}
 {%set hash_val = "14b55df9314ece2e7e53258c41b2f29a1fe0d7517ded586fa9ed137edf9a39ec" %}
 
 package:
-  name: {{ name }}-data
+  name: {{ name }}
   version: {{ version }}
 
 source:
   fn: {{ name }}-{{ version }}.zip
-  url: https://github.com/nltk/nltk_data/archive/gh-pages.zip
+  url: https://github.com/nltk/nltk_data/archive/{{ commit }}.tar.gz
   {{ hash_type }}: {{ hash_val }}
 
 build:
   number: 0
   noarch: generic
+  skip: true  # [win]
+  skip: true  # [osx]
 
 requirements:
   build:
@@ -23,14 +26,6 @@ requirements:
     - python
     - nltk >=3.2.5
     - six
-
-test:
-  imports:
-    - nltk
-  files:
-    - test_data.py
-  commands:
-    - python test_data.py
 
 about:
   home: http://nltk.org/
