--- a/recipes/nltk-data/meta.yaml
+++ b/recipes/nltk-data/meta.yaml
@@ -9,7 +9,7 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.zip
+  fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/nltk/nltk_data/archive/{{ commit }}.tar.gz
   {{ hash_type }}: {{ hash_val }}
 
