Rename to nltk_data

--- a/recipes/nltk-data/meta.yaml
+++ b/recipes/nltk-data/meta.yaml
@@ -1,4 +1,4 @@
-{%set name = "nltk-data" %}
+{%set name = "nltk_data" %}
 {%set version = "2017.10.22" %}
 {% set commit = "c0a373066e1477bd201acb071be171e8cc0ca673" %}
 {%set hash_type = "sha256" %}
@@ -23,7 +23,6 @@ requirements:
   run:
     - python
     - nltk >=3.2.5
-    - six
 
 about:
   home: http://nltk.org/
