--- a/recipes/pymultinest/meta.yaml
+++ b/recipes/pymultinest/meta.yaml
@@ -1,46 +1,53 @@
+{% set name = "pymultinest" %}
+{% set version = "2.6" %}
+{% set sha256 = "e5e76de90d226150659bc817e4a207556060bd91db1471e731d7734a7aa1826e" %}
+
 package:
-  name: pymultinest
-  version: "2.6"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: pymultinest-2.6.tar.gz
-  url: https://pypi.python.org/packages/c2/fc/77bdd8356068125bba0a5c07bfa2b4a3f492bff614aeae783bc1a566d699/pymultinest-2.6.tar.gz
-  md5: d9e5eee6abd3784056ca5ccc1f05cab9
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
-   number: 1
+   number: 0
    skip: true  # [win]
    skip: true  # [py3k]
 
 requirements:
-
+    
   build:
-    - toolchain
     - python x.x
-    - setuptools
     - multinest
-    - numpy
+    - numpy 1.11.*
     - scipy
     - matplotlib
     - pytest
+    - pytest-runner
 
   run:
     - python x.x
     - multinest
-    - numpy
+    - numpy >=1.11
     - scipy
     - matplotlib
-    - pytest
 
 test:
   imports:
     - pymultinest
+  commands:
+    - python ${CONDA_PREFIX}/share/pymultinest/pymultinest_demo_minimal.py
+
 
 about:
   home: http://johannesbuchner.github.com/PyMultiNest/
-  license: GPLv3
-  summary: 'Access modules for the MultiNest, APEMoST, Cuba and PolyChord integration libraries'
-  license_family: GPL3
+  license: GPL-3
+  summary: 'Access module for the MultiNest'
+  license_family: GPL
+  dev_url: https://github.com/JohannesBuchner/PyMultiNest
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
 
 extra:
   recipe-maintainers:
