WIP: add more import tests

--- a/recipes/ophyd/meta.yaml
+++ b/recipes/ophyd/meta.yaml
@@ -28,6 +28,8 @@ requirements:
 test:
   imports:
     - ophyd
+    - ophyd.utils
+    - ophyd.areadetector
 
 about:
   home: https://github.com/NSLS-II/ophyd
