WIP: add breaking import

--- a/recipes/ophyd/meta.yaml
+++ b/recipes/ophyd/meta.yaml
@@ -30,6 +30,7 @@ test:
     - ophyd
     - ophyd.utils
     - ophyd.areadetector
+    - ophyd.sim
 
 about:
   home: https://github.com/NSLS-II/ophyd
