--- a/recipes/python-irodsclient/meta.yaml
+++ b/recipes/python-irodsclient/meta.yaml
@@ -19,23 +19,25 @@ requirements:
   build:
     - python
     - setuptools
+    - PrettyTable
   run:
     - python
 
 test:
   imports:
     - irods
+    - irods.message
+    - irods.manager
 
 about:
   home: https://github.com/irods/python-irodsclient
-  license: BSD
-  license_file: LICENSE.txt
+  license: BSD-3-Clause
   summary: 'A python API for iRODS'
   description: |
     iRODS is an open-source distributed data management system. This is a
     client API implemented in python.
-  doc_url: http://simplejson.readthedocs.io/
-  dev_url: https://github.com/simplejson/simplejson
+  doc_url: https://github.com/irods/python-irodsclient
+  dev_url: https://github.com/irods/python-irodsclient
 
 extra:
   recipe-maintainers:
