--- a/recipes/smif/meta.yaml
+++ b/recipes/smif/meta.yaml
@@ -24,18 +24,18 @@ requirements:
     - setuptools
     - pyscaffold
   run:
-    - fiona 1.7.10
-    - flask 0.12.2
-    - isodate 0.6.0
-    - networkx 1.11
-    - numpy 1.13.1
-    - pint 0.8.1
+    - fiona >=1.7
+    - flask
+    - isodate
+    - networkx ~=1.11
+    - numpy
+    - pint >=0.8
     - python
-    - python-dateutil 2.6.1
-    - pyyaml 3.12
-    - rtree 0.8.3
+    - python-dateutil >=2.6
+    - pyyaml >=3.12
+    - rtree >=0.7
     - scikit-optimize 0.3
-    - shapely 1.6.2
+    - shapely >=1.3
 
 about:
   home: http://github.com/nismod/smif
