Add test imports

--- a/recipes/smif/meta.yaml
+++ b/recipes/smif/meta.yaml
@@ -37,6 +37,15 @@ requirements:
     - scikit-optimize 0.3
     - shapely >=1.3
 
+test:
+  imports:
+    - smif
+    - smif.cli
+    - smif.data_layer
+    - smif.http_api
+    - smif.model
+    - smif.parameters
+
 about:
   home: http://github.com/nismod/smif
   license: MIT
