--- a/recipes/smif/meta.yaml
+++ b/recipes/smif/meta.yaml
@@ -28,14 +28,14 @@ requirements:
     - fiona >=1.7
     - flask
     - isodate
-    - networkx ~=1.11
-    - numpy
+    - networkx >=1.11
+    - numpy >=1.10
     - pint >=0.8
     - python
     - python-dateutil >=2.6
     - pyyaml >=3.12
     - rtree >=0.7
-    - scikit-optimize 0.3
+    - scikit-optimize 0.3.*
     - shapely >=1.3
 
 test:
