Add smif.convert to test, remove smif.http_api (not in v0.5.0)

--- a/recipes/smif/meta.yaml
+++ b/recipes/smif/meta.yaml
@@ -42,8 +42,8 @@ test:
   imports:
     - smif
     - smif.cli
+    - smif.convert
     - smif.data_layer
-    - smif.http_api
     - smif.model
     - smif.parameters
 
