Test smif -h command

--- a/recipes/smif/meta.yaml
+++ b/recipes/smif/meta.yaml
@@ -46,6 +46,8 @@ test:
     - smif.data_layer
     - smif.model
     - smif.parameters
+  commands:
+    - smif -h
 
 about:
   home: http://github.com/nismod/smif
