--- a/recipes/smif/meta.yaml
+++ b/recipes/smif/meta.yaml
@@ -65,3 +65,8 @@ about:
     API.
   doc_url: http://smif.readthedocs.io/
   dev_url: https://github.com/nismod/smif
+
+extra:
+  recipe-maintainers:
+    - tomalrussell
+    - willu47
