Skip Windows builds.

--- a/recipes/r-splus2r/meta.yaml
+++ b/recipes/r-splus2r/meta.yaml
@@ -13,6 +13,7 @@ source:
     - https://cran.r-project.org/src/contrib/splus2R_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/splus2R/splus2R_{{ version }}.tar.gz
   sha256: 5f1b3c3fc3bea998ef91478742d9215cc2d1c2d94ba17a2834ec02df37922b77
+  skip: True  # [win]
 
 build:
   number: 0
