--- a/recipes/r-spatest/meta.yaml
+++ b/recipes/r-spatest/meta.yaml
@@ -28,6 +28,7 @@ build:
     - lib/R/lib/
     - lib/
 
+
 requirements:
   build:
     - r-base
@@ -54,6 +55,30 @@ about:
 
   license_family: GPL3
 
+# The original CRAN metadata for this package was:
+
+# Package: SPAtest
+# Type: Package
+# Title: Score Test Based on Saddlepoint Approximation
+# Version: 2.0.2
+# Date: 2017-11-03
+# Author: Rounak Dey, Seunggeun Lee
+# Maintainer: Rounak Dey <deyrnk@umich.edu>
+# Description: Performs score test using saddlepoint approximation to estimate the null distribution.
+# Depends: R (>= 3.0.0)
+# License: GPL (>= 2)
+# Repository: CRAN
+# NeedsCompilation: no
+# Packaged: 2017-11-03 15:13:37 UTC; Rounak
+# Date/Publication: 2017-11-03 16:51:44 UTC
+
+# See
+# http://docs.continuum.io/conda/build.html for
+# more information about meta.yaml
+
 extra:
   recipe-maintainers:
-    - endrebak
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
