--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -10,6 +10,9 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/Reactive-Extensions/RxCpp/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    - install-to-include.patch  # Patch is already in upstream:
+    # https://github.com/Reactive-Extensions/RxCpp/commit/5b7b2a5
 
 build:
   number: 0
@@ -17,7 +20,7 @@ build:
     - cd projects
     - mkdir build
     - cd build
-    - cmake -B. ../CMake
+    - cmake -DCMAKE_INSTALL_PREFIX=$PREFIX -B. ../CMake
     # build a simple example to make sure everything works
     -  make println && examples/println/println     # [unix]
     - nmake println && examples\\println\\println   # [win]
