try to fix windows nmake arg

--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -23,7 +23,7 @@ build:
     - cmake -DCMAKE_INSTALL_PREFIX=$PREFIX -B. ../CMake
     # build a simple example to make sure everything works
     -  make println && examples/println/println     # [unix]
-    - nmake println && examples\\println\\println   # [win]
+    - nmake rxcpp::examples::println && examples\\println\\println   # [win]
     # install the source files (since it's header-only)
     - make install
 
