fix build a bit

--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -20,11 +20,12 @@ build:
     - cd projects
     - mkdir build
     - cd build
-    - cmake -DCMAKE_INSTALL_PREFIX=$PREFIX -B. ../CMake
-    # build a simple example to make sure everything works
-    -  make println && examples/println/println     # [unix]
-    - nmake rxcpp::examples::println && examples\\println\\println   # [win]
-    # install the source files (since it's header-only)
+    - cmake -DCMAKE_INSTALL_PREFIX=$PREFIX          ../CMake  # [unix]
+    - cmake -DCMAKE_INSTALL_PREFIX=%LIBRARY_PREFIX% ../CMake  # [win]
+    # Run a quick build test that things are sensible.
+    - make rxcpp_test_group_by && test/rxcpp_test_group_by      # [unix]
+    - nmake rxcpp_test_group_by && tests\/rxcpp_test_group_by   # [win]
+    # Install header files (won't install tests/examples):
     - make install
 
 requirements:
