give up on nmake, sigh

--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -17,14 +17,17 @@ source:
 build:
   number: 0
   script:
+    - set -ex  # conda-build 2 doesn't do this automatically  # [unix]
     - cd projects
     - mkdir build
     - cd build
     - cmake -DCMAKE_INSTALL_PREFIX=$PREFIX          ../CMake  # [unix]
     - cmake -DCMAKE_INSTALL_PREFIX=%LIBRARY_PREFIX% ../CMake  # [win]
     # Run a quick build test that things are sensible.
-    - make rxcpp_test_group_by && test/rxcpp_test_group_by      # [unix]
-    - nmake rxcpp_test_group_by && tests\/rxcpp_test_group_by   # [win]
+    # Can't convince nmake to only build one thing, though, so build everything
+    # there.
+    - make rxcpp_test_group_by && test/rxcpp_test_group_by  # [unix]
+    - nmake && tests\\rxcpp_test_group_by                   # [win]
     # Install header files (won't install tests/examples):
     - make install
 
