make it noarch:generic.  Add about metadata

--- a/recipes/conda-forge-pinning/meta.yaml
+++ b/recipes/conda-forge-pinning/meta.yaml
@@ -9,5 +9,20 @@ source:
 
 build:
   number: 0
+  noarch: generic
   script: cp conda_build_config.yaml $PREFIX  # [unix]
   script: copy conda_build_config.yaml %PREFIX%  # [win]
+
+about:
+  summary: The baseline versions of software for the conda-forge ecosystem
+  license: MIT
+  license_family: MIT
+  home: https://github.com/conda-forge/staged-recipes/wiki/Pinned-dependencies
+
+extra:
+  recipe-maintainers:
+    - isuruf
+    - jakirkham
+    - msarahan
+    - ocefpaf
+    - pelson
