remove selectors for build/script

--- a/recipes/conda-forge-pinning/meta.yaml
+++ b/recipes/conda-forge-pinning/meta.yaml
@@ -10,8 +10,8 @@ source:
 build:
   number: 0
   noarch: generic
-  script: cp conda_build_config.yaml $PREFIX  # [unix]
-  script: copy conda_build_config.yaml %PREFIX%  # [win]
+  # assumes that this package is built on mac/linux, since we can't have selectors with noarch
+  script: cp conda_build_config.yaml $PREFIX
 
 about:
   summary: The baseline versions of software for the conda-forge ecosystem
