--- a/recipes/conda-forge-pinning/meta.yaml
+++ b/recipes/conda-forge-pinning/meta.yaml
@@ -13,6 +13,10 @@ build:
   # assumes that this package is built on mac/linux, since we can't have selectors with noarch
   script: cp conda_build_config.yaml $PREFIX
 
+test:
+  commands:
+    - test -f $PREFIX/conda_build_config.yaml
+
 about:
   summary: The baseline versions of software for the conda-forge ecosystem
   license: MIT
