--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -21,13 +21,11 @@ build:
     - cd projects
     - mkdir build
     - cd build
-    - cmake -DCMAKE_INSTALL_PREFIX=$PREFIX          ../CMake  # [unix]
-    - cmake -DCMAKE_INSTALL_PREFIX=%LIBRARY_PREFIX% ../CMake  # [win]
+    - cmake -G"Unix Makefiles"  -DCMAKE_INSTALL_PREFIX=$PREFIX          ../CMake  # [unix]
+    - cmake -G"NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%LIBRARY_PREFIX% ../CMake  # [win]
     # Run a quick build test that things are sensible.
-    # Can't convince nmake to only build one thing, though, so build everything
-    # there.
-    - make rxcpp_test_group_by && test/rxcpp_test_group_by  # [unix]
-    - nmake && tests\\rxcpp_test_group_by                   # [win]
+    - make rxcpp_test_group_by  && test/rxcpp_test_group_by    # [unix]
+    - nmake rxcpp_test_group_by && tests\\rxcpp_test_group_by  # [win]
     # Install header files (won't install tests/examples):
     - make install
 
