--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -21,13 +21,20 @@ build:
     - cd projects
     - mkdir build
     - cd build
+
     - cmake -G"Unix Makefiles"  -DCMAKE_INSTALL_PREFIX=$PREFIX          ../CMake  # [unix]
     - cmake -G"NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%LIBRARY_PREFIX% ../CMake  # [win]
+    - if errorlevel 1 exit 1  # [win]
+
     # Run a quick build test that things are sensible.
     - make rxcpp_test_group_by  && test/rxcpp_test_group_by    # [unix]
     - nmake rxcpp_test_group_by && tests\\rxcpp_test_group_by  # [win]
+    - if errorlevel 1 exit 1  # [win]
+
     # Install header files (won't install tests/examples):
-    - make install
+    - make install   # [unix]
+    - nmake install  # [win]
+    - if errorlevel 1 exit 1  # [win]
 
 requirements:
   build:
