switch back to println, since submodule not present

--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -14,6 +14,10 @@ source:
     - install-to-include.patch  # Patch is already in upstream:
     # https://github.com/Reactive-Extensions/RxCpp/commit/5b7b2a5
 
+# WARNING: this source doesn't include the Catch submodule, which is used for
+#          the test commands. It's not used for the examples, and we can just
+#          ignore it there.
+
 build:
   number: 0
   script:
@@ -27,8 +31,8 @@ build:
     - if errorlevel 1 exit 1  # [win]
 
     # Run a quick build test that things are sensible.
-    - make rxcpp_test_group_by  && test/rxcpp_test_group_by    # [unix]
-    - nmake rxcpp_test_group_by && tests\\rxcpp_test_group_by  # [win]
+    - make  println && examples/println/println    # [unix]
+    - nmake println && examples\\println\\println  # [win]
     - if errorlevel 1 exit 1  # [win]
 
     # Install header files (won't install tests/examples):
