more windows stupidity

--- a/recipes/rxcpp/meta.yaml
+++ b/recipes/rxcpp/meta.yaml
@@ -39,12 +39,23 @@ build:
     - make install   # [unix]
     - nmake install  # [win]
     - if errorlevel 1 exit 1  # [win]
+  skip: true  # [win and py27]
 
 requirements:
   build:
     - cmake
     - toolchain
-  # NOTE: rxcpp is header-only, so don't need to do the python dance on Windows
+    - python  # [win]
+    - vc 9    # [win and py27]
+    - vc 10   # [win and py34]
+    - vc 14   # [win and py>=35]
+  run:
+    - vc 9   # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and py>=35]
+  # NOTE: rxcpp is header-only, but we still need the vc version dance because
+  #       the build system doesn't work on vc9. Not sure if the actual library
+  #       works or not.
 
 test:
   commands:
