--- a/recipes/smif/meta.yaml
+++ b/recipes/smif/meta.yaml
@@ -15,6 +15,7 @@ build:
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: True  # [py<35]
   entry_points:
     - smif = smif.cli:main
 
