--- a/recipes/pyepics/meta.yaml
+++ b/recipes/pyepics/meta.yaml
@@ -31,7 +31,7 @@ test:
 
 about:
   home: http://pyepics.github.io/pyepics/
-  license: Epics Open License
+  license: Epics Open
   summary: Python interface to Epics Channel Access
 
 extra:
