--- a/recipes/pyepics/meta.yaml
+++ b/recipes/pyepics/meta.yaml
@@ -13,9 +13,8 @@ source:
 
 build:
   number: 0
-  noarch: python
-  script: |
-      python setup.py install --single-version-externally-managed --record=record.txt
+  script: python setup.py install --single-version-externally-managed --record=record.txt
+  skip: True  # [win]
 
 requirements:
   build:
