--- a/recipes/r-skat/meta.yaml
+++ b/recipes/r-skat/meta.yaml
@@ -69,3 +69,7 @@ about:
 # See
 # http://docs.continuum.io/conda/build.html for
 # more information about meta.yaml
+
+extra:
+  recipe-maintainers:
+    - bsennblad
