Change license to Various

--- a/recipes/nltk-data/meta.yaml
+++ b/recipes/nltk-data/meta.yaml
@@ -26,7 +26,7 @@ requirements:
 
 about:
   home: http://nltk.org/
-  license: Apache 2.0
+  license: Various
   summary: Data for the Natural Language Toolkit
 
 extra:
