add license and other things

--- a/recipes/pyepics/meta.yaml
+++ b/recipes/pyepics/meta.yaml
@@ -20,19 +20,26 @@ requirements:
   build:
       - python
       - setuptools
-      - numpy
   run:
       - python
       - numpy
+      - pyparsing
 
 test:
   imports:
     - epics
+    - epics.autosave
+    - epics.compat
+    - epics.devices
 
 about:
   home: http://pyepics.github.io/pyepics/
   license: Epics Open
   summary: Python interface to Epics Channel Access
+  # https://github.com/pyepics/pyepics/pull/108
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  dev_url: https://github.com/pyepics/pyepics
+  doc_url: http://pyepics.github.io/pyepics
 
 extra:
   recipe-maintainers:
