--- a/recipes/ophyd/meta.yaml
+++ b/recipes/ophyd/meta.yaml
@@ -12,16 +12,16 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: True  # [py2k or win]
 
 requirements:
   build:
-    - python >=3
+    - python
     - setuptools
   run:
-    - python >=3
+    - python
     - networkx
     - numpy
     - pyepics
