pycryptodomex: add check for mpir/gmp

--- a/recipes/pycryptodomex/meta.yaml
+++ b/recipes/pycryptodomex/meta.yaml
@@ -47,6 +47,8 @@ test:
     - Cryptodome.SelfTest.Util
     - Cryptodome.Signature
     - Cryptodome.Util
+  requires:
+    - psutil
 
 about:
   home: http://www.pycryptodome.org
