--- a/recipes/r-rjags/meta.yaml
+++ b/recipes/r-rjags/meta.yaml
@@ -48,6 +48,8 @@ about:
   license: GPL (== 2)
   summary: Interface to the JAGS MCMC library.
   license_family: GPL2
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
 
 extra:
   recipe-maintainers:
