--- a/recipes/r-skat/meta.yaml
+++ b/recipes/r-skat/meta.yaml
@@ -12,13 +12,13 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/SKAT_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/SKAT/SKAT_{{ version }}.tar.gz
-
-
   sha256: 7442408ccd1b9d2abb3f3dbd27e1b46e50b87042195bc46ce25fe0d887f98e7a
 
 build:
   number: 0
-
+  
+  skip: true # [win]
+  
   rpaths:
     - lib/R/lib/
     - lib/
@@ -43,33 +43,13 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=SKAT
-  license: GPL (>= 2)
+  license: GPL 3
   summary: Functions for kernel-regression-based association tests including Burden test, SKAT
     and SKAT-O. These methods aggregate individual SNP score statistics in a SNP set
     and efficiently compute SNP-set level p-values.
   license_family: GPL3
-
-# The original CRAN metadata for this package was:
-
-# Package: SKAT
-# Type: Package
-# Title: SNP-Set (Sequence) Kernel Association Test
-# Version: 1.3.2.1
-# Date: 2017-07-21
-# Author: Seunggeun (Shawn) Lee, with contributions from Larisa Miropolsky and Michael Wu
-# Maintainer: Seunggeun (Shawn) Lee <leeshawn@umich.edu>
-# Description: Functions for kernel-regression-based association tests including Burden test, SKAT and SKAT-O. These methods aggregate individual SNP score statistics in a SNP set and efficiently compute SNP-set level p-values.
-# License: GPL (>= 2)
-# Depends: R (>= 2.13.0)
-# NeedsCompilation: yes
-# Packaged: 2017-07-26 06:04:57 UTC; ripley
-# Repository: CRAN
-# Date/Publication: 2017-08-03 05:20:44 UTC
-
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
-
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
+  
 extra:
   recipe-maintainers:
     - bsennblad
