add missing dependency

--- a/recipes/onnx-caffe2/meta.yaml
+++ b/recipes/onnx-caffe2/meta.yaml
@@ -24,6 +24,7 @@ requirements:
   run:
     - python
     - onnx
+    - click
     # NB: caffe2 is not conda managed, so don't put it as a "dep"
 
 test:
