add comment pointing to license PR https://github.com/onnx/onnx-caffe2/pull/81

--- a/recipes/onnx-caffe2/meta.yaml
+++ b/recipes/onnx-caffe2/meta.yaml
@@ -43,7 +43,7 @@ about:
   home: https://github.com/onnx/onnx-caffe2/
   license: MIT
   license_family: MIT
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'  # https://github.com/onnx/onnx-caffe2/pull/81
   summary: Caffe2 implementation of Open Neural Network Exchange (ONNX)
   description: |
     This library provides Caffe2 importer and exporter for the ONNX format.
