fixes and more dependencies

--- a/recipes/r-animation/meta.yaml
+++ b/recipes/r-animation/meta.yaml
@@ -1,6 +1,4 @@
 {% set version = '2.5' %}
-{% set posix = 'm2-' if win else '' %}
-{% set native = 'm2w64-' if win else '' %}
 
 package:
   name: r-animation
@@ -18,6 +16,7 @@ build:
   rpaths:
     - lib/R/lib/
     - lib/
+  skip: true  # [win]
 
 requirements:
   build:
@@ -25,11 +24,13 @@ requirements:
 
   run:
     - r-base
+    - texlive-core
+    - imagemagick
+    - ffmpeg
 
 test:
   commands:
-    - $R -e "library('animation')"  # [not win]
-    - "\"%R%\" -e \"library('animation')\""  # [win]
+    - $R -e "library('animation')"
 
 about:
   home: https://yihui.name/animation
@@ -40,10 +41,9 @@ about:
     learning. These functions may be helpful in teaching statistics and data analysis.
     Also provided in this package are a series of functions to save animations to various
     formats, e.g. Flash, 'GIF', HTML pages, 'PDF' and videos. 'PDF' animations can be
-    inserted into 'Sweave' / 'knitr' easily.
+    inserted into 'Sweave' / 'knitr' easily. SWF files generation not supported with this distribution
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win] 
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
