Use tarball instead of Git repo as source

--- a/recipes/fmpy/meta.yaml
+++ b/recipes/fmpy/meta.yaml
@@ -6,8 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/CATIA-Systems/FMPy.git
-  git_tag: "v{{ version }}"
+  url: https://github.com/CATIA-Systems/FMPy/archive/v{{ version }}.tar.gz
+  fn: v{{ version }}.tar.gz
 
 build:
   skip: true  # [not win]
