Add sha256 hash for tarball

--- a/recipes/fmpy/meta.yaml
+++ b/recipes/fmpy/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "fmpy" %}
 {% set version = "0.1.0" %}
+{% set sha256 = "230dfc68fa47ab0c8b9a26401ca1a7fb28cca61e97d377cf0a7d0861eb6f684f" %}
 
 package:
   name: {{ name|lower }}
@@ -8,6 +9,7 @@ package:
 source:
   url: https://github.com/CATIA-Systems/FMPy/archive/v{{ version }}.tar.gz
   fn: v{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   number: 0
