--- a/recipes/pycryptodomex/meta.yaml
+++ b/recipes/pycryptodomex/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pycryptodomex" %}
 {% set version = "3.4.7" %}
-{% set sha256= "52aa2e540d06d63636e4b5356957c520611e28a88386bad4d18980e4b00e0b5a" %}
+{% set sha256 = "52aa2e540d06d63636e4b5356957c520611e28a88386bad4d18980e4b00e0b5a" %}
 
 package:
   name: {{ name|lower }}
@@ -10,6 +10,10 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    # ctypes.util.find_library() isn't CONDA_PREFIX aware :'(
+    # https://github.com/ContinuumIO/anaconda-issues/issues/1716
+    - 0001-Make-load_lib-CONDA_PREFIX-aware.patch  # [unix]
 
 build:
   number: 0
