do python 2.7 for the heck of it

--- a/recipes/latex2sympy/meta.yaml
+++ b/recipes/latex2sympy/meta.yaml
@@ -41,7 +41,7 @@ test:
   imports:
     - latex2sympy
   commands:
-    - nosetests -vvv
+    - nosetests -v
 
 about:
   home: https://github.com/augustt198/latex2sympy
