clean up the pythons, consider noarch: python

--- a/recipes/antlr4-python3-runtime/meta.yaml
+++ b/recipes/antlr4-python3-runtime/meta.yaml
@@ -14,13 +14,13 @@ source:
 build:
   number: 0
   script: python setup.py install
-  skip: True  # [win]
+  skip: True  # [win] or [py2k]
 
 requirements:
   build:
-    - python >=3.4,<4
+    - python
   run:
-    - python >=3.4,<4
+    - python
 
 test:
   imports:
