--- a/recipes/antlr4-python2-runtime/meta.yaml
+++ b/recipes/antlr4-python2-runtime/meta.yaml
@@ -14,13 +14,13 @@ source:
 build:
   number: 0
   script: python setup.py install
-  skip: True  # [win]
+  skip: True  # [win] or [py3k]
 
 requirements:
   build:
-    - python >=2.7,<3
+    - python
   run:
-    - python >=2.7,<3
+    - python
 
 test:
   imports:
