antlr4 on windows

--- a/recipes/antlr4/meta.yaml
+++ b/recipes/antlr4/meta.yaml
@@ -14,9 +14,10 @@ source:
 build:
   number: 0
   script:
-    - cp {{ SRC_DIR }}/antlr-{{ version }}-complete.jar {{ PREFIX }}/lib/
-    - cp {{ RECIPE_DIR }}/antlr4 {{ PREFIX }}/bin/
-  skip: True  # [win]
+    - cp {{ SRC_DIR }}/antlr-{{ version }}-complete.jar {{ PREFIX }}/lib  # [unix]
+    - cp {{ RECIPE_DIR }}/antlr4 {{ PREFIX }}/bin/  # [unix]
+    - copy {{ SRC_DIR }}\antlr-{{ version }}-complete.jar {{ PREFIX }}\Library\lib\  # [win]
+    - copy {{ RECIPE_DIR }}\antlr4.cmd {{ PREFIX }}\Scripts\  # [win]
 
 requirements:
   build:
