--- a/recipes/antlr4-python3-runtime/meta.yaml
+++ b/recipes/antlr4-python3-runtime/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install
-  skip: True  # [win] or [py2k]
+  skip: True  # [py2k]
 
 requirements:
   build:
